# clinicaltrials-kg

./: .gitignore  README.md  pyproject.toml
benchmarks/: QUERY_RESULTS.md  run_queries.sh
data/: drugbank_vocabulary.csv
docs/: data-sources.md  getting-started.md  nsclc_radar.md
etl/: aact_batch_loader.py  aact_loader.py  clinicaltrials_loader.py  download_aact.py  drug_loader.py  embedding_gen.py  loader.py  mesh_loader.py  publication_loader.py
evaluation/: criteria.py  runner.py
mcp_server/: server.py
mcp_server/tools/: analytics_tools.py  disease_tools.py  drug_tools.py  trial_tools.py
nsclc/: __init__.py  __main__.py  brief.py  build_subset.py  diff_snapshots.py  entities.py  entities.yaml  modality.py  run.py  snapshot.py  workflows.json  workflows.py
scenarios/: adverse_event_analysis.json  drug_repurposing.json  eligibility_matching.json  geographic_analysis.json  multi_hop_reasoning.json  outcome_analysis.json  trial_landscape.json
schema/: clinicaltrials_kg.cypher
scripts/: enrich_breast_cancer_drugs.py
tests/: test_aact_batch_loader.py  test_aact_loader.py  test_mcp_tools.py  test_nsclc_diff.py  test_nsclc_entities.py  test_nsclc_subset.py  test_scenarios.py  test_schema.py
