[project]
name = "clinicaltrials-kg"
version = "0.1.0"
description = "Clinical Trials Knowledge Graph — real-world data from ClinicalTrials.gov, MeSH, RxNorm, OpenFDA, and PubMed"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "Madhulatha Mandarapu", email = "madhulatha@samyama.ai"},
    {name = "Sandeep Kunkunuru", email = "sandeep@samyama.ai"},
]
keywords = ["knowledge-graph", "clinical-trials", "graph-database", "samyama", "mesh", "rxnorm"]

dependencies = [
    "samyama>=0.6.0",
    "httpx>=0.25",
    "requests>=2.31",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "sentence-transformers>=2.2.0",
    "fastmcp>=0.1.0",
    "click>=8.0",
    "rich>=13.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21", "ruff>=0.1.0"]

[tool.setuptools.packages.find]
include = ["etl*", "mcp_server*", "evaluation*", "benchmark*", "nsclc*"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
